<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:useDefaultMargins="true"
        android:padding="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_name"
            android:layout_row="0"
            android:layout_column="0"
            style="@style/ContactLabelTextView"
            android:id="@+id/nameLabelTextView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            style="@style/ContactTextView"

            android:id="@+id/nametextView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            style="@style/ContactLabelTextView"
            android:text="@string/label_phone"
            android:id="@+id/phoneLabelTextView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            style="@style/ContactTextView"

            android:id="@+id/phonetextView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            style="@style/ContactLabelTextView"
            android:text="@string/label_email"
            android:id="@+id/emailLabelTextView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            style="@style/ContactTextView"

            android:id="@+id/emailtextView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            style="@style/ContactLabelTextView"
            android:text="@string/label_street"
            android:id="@+id/streetLabelTextView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            style="@style/ContactTextView"

            android:id="@+id/streettextView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="0"
            style="@style/ContactLabelTextView"
            android:text="@string/label_city"
            android:id="@+id/cityLabelTextView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="1"
            style="@style/ContactTextView"

            android:id="@+id/citytextView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="0"
            style="@style/ContactLabelTextView"
            android:text="@string/label_state"
            android:id="@+id/stateLabelTextView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="1"
            style="@style/ContactTextView"
            android:id="@+id/statetextView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="6"
            android:layout_column="0"
            style="@style/ContactLabelTextView"
            android:text="@string/label_zip"
            android:id="@+id/zipLabelTextView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="6"
            android:layout_column="1"
            style="@style/ContactTextView"
            android:id="@+id/ziptextView" />



    </GridLayout>

</ScrollView>